--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,11 +4,7 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
-		"jaromirihln.gas-syntax-highlighting",
-		"esbenp.prettier-vscode",
-		"streetsidesoftware.code-spell-checker",
-		"ms-vscode.vscode-typescript-next",
-		"ms-vscode.json"
+		"jaromirihln.gas-syntax-highlighting"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
