--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,8 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
-		"jaromirihln.gas-syntax-highlighting"
+		"jaromirihln.gas-syntax-highlighting",
+		"jaromirihln.google-gas-code-snippets"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
