--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,7 +1,8 @@
 {
   "comments": {
     "lineComment": "//",
-    "blockComment": ["/*", "*/"]
+    "blockComment": ["/*", "*/"],
+    "documentationComment": ["/**", "*/"]
   },
   "brackets": [
     ["{", "}"],
